--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <table cellspacing = "40">
       <tr>
-        <td><img src="file:///Users/feiyangxia/Nutstore%20Files/.symlinks/Nutstore/Coding%E5%AD%A6%E4%B9%A0/AngelaYuWebBootcamp/web%20development/HTML%20-%20Personal%20Site/images/IMG_9232.JPG" width="100" alt="明栎"></td>
+        <td><img src="images/IMG_9232.JPG" width="100" alt="明栎"></td>
         <td>
           <h1>Feiyang(Sophia) Xia</h1>
           <p>Engineer, Designer, Writer and Bartender </p>
